tdf#155121: XML Form Document: better take into account "not required"

Change-Id: Ibebdbc52f2bd7d09ec7aa5f072efef364249a291
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151733
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit aa0cbe2c82bbc2295b51357378a68da0d64a44a0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151780
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>